; ModuleID = '/home/carl/AnghaBench/php-src/ext/mbstring/libmbfl/mbfl/extr_mbfl_ident.c_mbfl_identify_filter_new2.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/mbstring/libmbfl/mbfl/extr_mbfl_ident.c_mbfl_identify_filter_new2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @mbfl_identify_filter_new2(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %5 = call i64 @mbfl_malloc(i32 4)
  %6 = inttoptr i64 %5 to i32*
  store i32* %6, i32** %4, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = icmp eq i32* %7, null
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store i32* null, i32** %2, align 8
  br label %20

10:                                               ; preds = %1
  %11 = load i32*, i32** %4, align 8
  %12 = load i32*, i32** %3, align 8
  %13 = call i64 @mbfl_identify_filter_init2(i32* %11, i32* %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %18

15:                                               ; preds = %10
  %16 = load i32*, i32** %4, align 8
  %17 = call i32 @mbfl_free(i32* %16)
  store i32* null, i32** %2, align 8
  br label %20

18:                                               ; preds = %10
  %19 = load i32*, i32** %4, align 8
  store i32* %19, i32** %2, align 8
  br label %20

20:                                               ; preds = %18, %15, %9
  %21 = load i32*, i32** %2, align 8
  ret i32* %21
}

declare dso_local i64 @mbfl_malloc(i32) #1

declare dso_local i64 @mbfl_identify_filter_init2(i32*, i32*) #1

declare dso_local i32 @mbfl_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
